libpgplot-perl (1:2.21-2) unstable; urgency=low

  * Rebuild with perl 5.12

 -- Carlo Segre <segre@debian.org>  Sun, 12 Jun 2011 15:59:55 -0500

libpgplot-perl (1:2.21-1) unstable; urgency=low

  * debian/control: Added: Vcs-Svn field (source stanza); Vcs-Browser
    field (source stanza). Removed: XS-Vcs-Svn fields (source stanza).
  * debian/control: Added: ${misc:Depends} to Depends: field.
  * debian/watch: use dist-based URL.
  * debian/control: fix dependency on pgplot5.
  * Remove Conflicts:/Replaces: pgperl.

  * New upstream release.
  * Switch to source format 3.0 (quilt).
  * Use tiny dh debian/rules file.
  * Bump debhelper compatibility level to 8.
  * Remove versions from build dependencies that are already satisfied in
    oldstable.
  * debian/copyright: use DEP5 format, point to -GPL-1.
  * Set Standards-Version to 3.9.2 (no further changes).
  * Add /me to Uploaders.
  * Add a patch to fix a spelling mistake.

 -- gregor herrmann <gregoa@debian.org>  Sun, 24 Apr 2011 19:06:38 +0200

libpgplot-perl (1:2.20-1) unstable; urgency=low

  * New upstream release.
  * Reinsert into archive (Closes: #441034).
  * New maintainer - Debian Perl Group.
  * Rename to fit perl naming conventions, changing sections too.
  * Clean up debian/rules file a bit.
  * Fix debian/copyright to include upstream information.
  * Upgrade Standards-Version to 3.8.0

 -- Carlo Segre <segre@debian.org>  Sun, 01 Feb 2009 15:36:49 -0600

pgperl (1:2.18-5) unstable; urgency=low

  * QA Group upload orphaning this package

 -- Andrew Pollock <apollock@debian.org>  Thu,  3 Mar 2005 13:36:34 +1100

pgperl (1:2.18-4.1) unstable; urgency=low

  * Non-maintainer upload: I uploaded an unrelated source package that was
    also called pgperl (perl backend for PostgreSQL), which overwrote your
    package. Sorry for that! I renamed my source package and do this upload to
    restore your package. I did not change anything apart from the version
    number.
