@@ -1,8 +1,11 @@
 libpgplot-perl (1:2.21-2) unstable; urgency=low
 
+  * Add dependency on chrpath to remove RPATH from PGPLOT.so
+  * Add XS-Autobuild: yes field in hope that non-free autobuilders
+    will permit this package to be built.
   * Rebuild with perl 5.12
 
- -- Carlo Segre <segre@debian.org>  Sun, 12 Jun 2011 15:59:55 -0500
+ -- Carlo Segre <segre@debian.org>  Sun, 12 Jun 2011 17:00:15 -0500
 
 libpgplot-perl (1:2.21-1) unstable; urgency=low
 
